--- a/Q5.md
+++ b/Q5.md
@@ -2,3 +2,5 @@
 Como um relacionamento 1-N é implementado no modelo relacional?
 
 Como um relacionamento M-N é implementado no modelo relacional?
+
+Um relacionamento recursivo pode ser 1-1? 
