--- a/Q5.md
+++ b/Q5.md
@@ -1,6 +1,8 @@
 
-Como um relacionamento 1-N é implementado no modelo relacional?
+Como um **relacionamento 1-N** é implementado no modelo relacional?
 
-Como um relacionamento M-N é implementado no modelo relacional?
+Como um **relacionamento M-N** é implementado no modelo relacional?
 
-Um relacionamento recursivo pode ser 1-1? 
+Dê exemplo de um **relacionamento recursivo**.
+
+Dê exemplo de uma **entidade fraca** em um modelo relacional.
