--- a/Q5.md
+++ b/Q5.md
@@ -5,4 +5,6 @@ Como um **relacionamento M-N** é implementado no modelo relacional?
 
 Dê exemplo de um **relacionamento recursivo**.
 
+Dê um exemplo de **atributo associativo**.
+
 Dê exemplo de uma **entidade fraca** em um modelo relacional.
